@@ -122,6 +122,16 @@ down = '''
 37850
 38385
 38798
+39095
+39667
+40378
+40962
+41495
+41900
+42204
+42429
+42720
+43027
 '''
 
 down = map(int,down.split())
@@ -132,7 +142,7 @@ clf()
 p1 = bar(ind,down,width)
 ylabel('Downloads')
 xticks(ind[::12]+width/2, 
-       ('6/06','6/07','6/08','6/09','6/10','6/11','6/12','6/13','6/14','6/15'))
+       ('6/06','6/07','6/08','6/09','6/10','6/11','6/12','6/13','6/14','6/15','6/16'))
 title('Cumulative Downloads')
 #grid(True)
 
